匹配aws的mysql的写法